# koda

./: .gitignore  PROJECT_SUMMARY.md  README.md  install-koda.desktop  install.bat  install.ps1  install.sh  pyproject.toml  uninstall.ps1  uninstall.sh
kiro_tui/: __init__.py  app.py  i18n.py  main.py
kiro_tui/components/: chat.py  sidebar.py  status_bar.py
kiro_tui/screens/: login_screen.py  project_selector.py
kiro_tui/services/: agent_manager.py  cli_executor.py  project_manager.py
